--- a/.gitignore
+++ b/.gitignore
@@ -23,9 +23,8 @@ coverage
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
 
-# Dependency directories
+# Dependency directory
 node_modules
-jspm_packages
 
 # Optional npm cache directory
 .npm
@@ -33,53 +32,15 @@ jspm_packages
 # Optional REPL history
 .node_repl_history
 
-# =========================
-# Operating System Files
-# =========================
+\scripts
 
-# OSX
-# =========================
+\.vs
 
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Thumbnails
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
-# Windows
-# =========================
-
-# Windows image file caches
-Thumbs.db
-ehthumbs.db
-
-# Folder config file
-Desktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
+*.js
+*.dat
+*.tmp
+!*jakefile.js
+!*typescript.js
+!*tscc.browser.js
+!*compiler.js
+!*gulpfile.js
